# wasm-gpt

./: .gitignore  README.md  server.py
examples/: common.cpp  common.h  utils.cpp  utils.h
examples/gpt-2/: CMakeLists.txt  index.html  main.cpp
src/: CMakeLists.txt
tests/: CMakeLists.txt
